テスト機能、別レアリティ機能追加

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -12,13 +12,11 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4 fixed-top">
         <div class="container-fluid">
-            {# ===== ここから変更：サイドバー表示ボタン ===== #}
             <button class="btn btn-dark" type="button" data-bs-toggle="offcanvas" data-bs-target="#sidebar" aria-controls="sidebar">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
                     <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
                 </svg>
             </button>
-            {# ===== ここまで変更 ===== #}
 
             <a class="navbar-brand" href="{{ url_for('main.index') }}">遊戯王在庫管理</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,48 +35,36 @@
                         <a class="nav-link dropdown-toggle {% if request.endpoint.startswith('admin.') %}active{% endif %}" href="#" id="adminMenuDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             管理メニュー
                         </a>
-{# app/templates/layout.html #}
-
-{# ...前略... #}
                         <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="adminMenuDropdown">
                             <li><a class="dropdown-item" href="{{ url_for('admin.admin_unify_rarities') }}">DBレアリティ統一</a></li>
                             <li><a class="dropdown-item" href="{{ url_for('admin.admin_import_csv') }}">CSVインポート</a></li>
                             <li><a class="dropdown-item" href="{{ url_for('admin.admin_batch_register') }}">一括カード登録</a></li>
                             <li><a class="dropdown-item" href="{{ url_for('admin.admin_check_categories') }}">カテゴリ不一致チェック</a></li>
                             <li><a class="dropdown-item {% if request.endpoint in ['admin.manage_products', 'admin.add_product', 'admin.edit_product'] %}active{% endif %}" href="{{ url_for('admin.manage_products') }}">製品マスタ管理</a></li>
-                            
-                            {# ===== ここから新規追加 ===== #}
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="{{ url_for('admin.manage_config') }}">アプリケーション設定管理</a></li>
                             <li><a class="dropdown-item" href="{{ url_for('admin.wiki_import') }}">Wikiからインポート</a></li>
-                            {# ===== ここまで新規追加 ===== #}
-
                             <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item" href="{{ url_for('main.download_csv') }}">CSVバックアップ</a></li>
                         </ul>
-{# ...後略... #}
                     </li>
                     {% endif %}
                 </ul>
-                <ul class="navbar-nav">
+                
+                <div class="d-flex align-items-center">
                     {% if g.user %}
-                        <li class="nav-item">
-                            <span class="navbar-text me-3">
-                               ようこそ、 {{ g.user.username }} さん
-                            </span>
-                        </li>
-                        <li class="nav-item">
-                            <a href="{{ url_for('auth.logout') }}" class="btn btn-outline-danger btn-sm">ログアウト</a>
-                        </li>
+                        <span class="navbar-text me-3">
+                            ようこそ、 {{ g.user.username }} さん
+                        </span>
+                        <a href="{{ url_for('auth.logout') }}" class="btn btn-outline-danger btn-sm">ログアウト</a>
                     {% else %}
-                        <li class="nav-item">
-                            <a href="{{ url_for('auth.login') }}" class="btn btn-outline-success btn-sm">ログイン</a>
-                        </li>
+                        <a href="{{ url_for('auth.login') }}" class="btn btn-outline-success btn-sm">ログイン</a>
                     {% endif %}
-                </ul>
-            </div>
+                </div>
+                </div>
         </div>
     </nav>
 
-    {# ===== ここから追加：サイドバー本体 ===== #}
     <div class="offcanvas offcanvas-start" tabindex="-1" id="sidebar" aria-labelledby="sidebarLabel">
         <div class="offcanvas-header">
             <h5 class="offcanvas-title" id="sidebarLabel">カテゴリで絞り込み</h5>
@@ -112,7 +98,6 @@
             </div>
         </div>
     </div>
-    {# ===== ここまで追加 ===== #}
 
     <main class="container mt-4 mb-5 pb-5"> 
         {% with messages = get_flashed_messages(with_categories=true) %}
